2010-08-06  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* Makefile.in: Added special sed script which changes
	libdecnumber/Makefile:CFLAGS = foo into CFLAGS ?= foo.  This allows
	libdfp/Makefile's sub make invocation of libdecnumber/Makefile to
	accept the updated CFLAGS.  This was necessary to allow configure to
	update CFLAGS with -mzarch for s390 z9-ec and z10.  GCC should fix
	this in their version of libdecnumber.
	* configure.ac: -mzarch added to CFLAGS when s390 system is z9-ec or
	z10.
	* README.developer: Added indication that configure.ac sets -mzarch in
	CFLAGS when appropriate.

2010-08-06  Ryan S. Arnold  <rsa@us.ibm.com>

	* Makefile.gdb (libdfp_tests.gdb): Add
	LD_LIBRARY_PATH=./:$LD_LIBRARY_PATH to ldd invocations to make sure
	it reports ./libdfp.so.1 as a dependency and not the system or
	toolchain libdfp.so.1.

2010-08-05  Ryan S. Arnold  <rsa@us.ibm.com>

	* ieee754r/Versions: Added __fabsd* and __fpclassifyd* under the
	correct libdfp version number 1.0.3.

2010-08-05  Ryan S. Arnold  <rsa@us.ibm.com>

	* dfp/math.h: Restructure to cleanup presentation.

2010-08-04  Ryan S. Arnold  <rsa@us.ibmcom>

	* ieee754r/Versions: Moved some of the __is* functions under LIBDFP_1.0.2
	and LIBDFP_1.0.3.  Removed unnecessary __is* functions from export
	that don't have polymorphic versions in math.h
	* dfp/math.h: Removed accidental undef of isunordered.  This was
	never implemented as a polymorphic function because it doesn't need to
	be (per the spec).  Removed redundant polymoprhic isnan().
	* Versions.def: Added Versions LIBDFP_1.0.2 and LIBDFP_1.0.3 for Libdfp.

2010-08-04  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* configure.ac: Apparently AC_CANONICAL_SYSTEM is only for compilers.
	I removed it, and support for --target.  Now you must use --build
	only.
	* README.developer: Removed directions for using --target.

2010-07-30  Ryan S. Arnold  <rsa@us.ibm.com>
